# libimage

./: .gitignore  BUILD  CMakeLists.txt  FindFreeImage.cmake  WORKSPACE  bazel.rc
FreeImage/: BUILD  CMakeLists.txt
FreeImage/LibJPEG/: BUILD
FreeImage/LibJXR/: BUILD  CMakeLists.txt
FreeImage/LibJXR/common/include/: wmspecstring.h
FreeImage/LibJXR/image/sys/: strcodec.c
FreeImage/LibJXR/jxrgluelib/: JXRMeta.h
FreeImage/LibRawLite/: BUILD  CMakeLists.txt
FreeImage/LibTIFF4/: BUILD  CMakeLists.txt  tif_config.h
FreeImage/LibWebP/: BUILD  CMakeLists.txt
FreeImage/OpenEXR/: BUILD  CMakeLists.txt
FreeImage/OpenEXR/IlmImf/: ImfOptimizedPixelReading.h  ImfSystemSpecific.h
FreeImage/ZLib/: BUILD  CMakeLists.txt
applications/extractor/: BUILD  CMakeLists.txt  imageExtractor.cpp
applications/libimagetest/: BUILD  CMakeLists.txt  libimagetest.cpp
image/: BUILD  CMakeLists.txt  image.cpp  image.h
libimagetest/: BUILD  CMakeLists.txt  libimagetest.cpp
src/: image.cpp  image.h
